--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "acorn": "^7.1.1",
+    "async": "^3.2.0",
     "clean-css": "^4.2.3",
     "cloudinary": "^1.21.0",
     "constantinople": "^4.0.1",
