--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bcrypt": "^4.0.1",
     "clean-css": "^4.2.3",
     "cloudinary": "^1.21.0",
+    "compression": "^1.7.4",
     "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-validator": "^6.4.0",
+    "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
